--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,14 @@
 .white {
   background-color: #eed4ac;
 }
+
+.selected {
+  background-color: brown;
+}
+
+.available {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: green;
+}
